crawler-service/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crawler-service
  labels:
    name: crawler-service
    app: crawler-service
